# 203-graph-to-rdb

./: .gitignore  README.md  demo.ipynb  example_data.json  example_map.yml
GraphToRDB/: __init__.py  enforce_schema.py  pyproject.toml
GraphToRDB/src/package/: enforce_schema.py  transform.py
transformed_data/: CREATE.sql  e_movie.csv  e_person.csv  r_acted_in.csv  r_directed.csv  r_produced.csv  r_reviewed.csv  r_wrote.csv
