[build-system]
requires = ["setuptools>=61.0", "schema", "pyyaml"]
build-backend = "setuptools.build_meta"

[project]
name = "GraphToRDB"
version = "0.0.1"
description = "Convert neo4j JSON data exports to relational tables."
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3.11"
]